--- a/ProgettoProva2.html
+++ b/ProgettoProva2.html
@@ -22,12 +22,12 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ZO8gE3" type="text/css" />
 
   <style>
-    .mbr-gallery .item-wrapper { position: relative; cursor: zoom-in; }
+    .mbr-gallery .item-wrapper { position: relative; cursor: zoom-in; pointer-events:auto !important}
     .mbr-gallery .item-wrapper .icon-wrapper{
       position:absolute; inset:auto 10px 10px auto; background:rgba(0,0,0,.5);
-      border-radius:50%; width:42px; height:42px; display:flex; align-items:center; justify-content:center;
+      border-radius:50%; width:42px; height:42px; display:flex; align-items:center; justify-content:center;pointer-events: none !important;
     }
-    .mbr-gallery img{ object-fit:cover; width:100%; height:auto; }
+    .mbr-gallery img{ object-fit:cover; width:100%; height:auto; pointer-events: auto !important;}
     .modal-fullscreen-sm-down .modal-dialog { max-width: 100%; margin: 0; }
     .modal-fullscreen-sm-down .modal-content { min-height: 100vh; border: 0; border-radius: 0; }
     .modal { padding-right: 0 !important; }
